--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,9 +1,34 @@
 /* Styles go here */
+
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+
+body {
+  position: relative;
+  width: 100%;
+  height: 10vh;
+  font-family: Montserrat;
+  margin-top: 0px;
+  z-index: 1;
+  /* background-color: #39595e; */
+  background-attachment: fixed;
+  background-color: #fffae6;
+  /* background-image: linear-gradient(147deg, #485461 0%, #28313b 74%); */
+}
+
 .center {
   display: flex;
   justify-content: center;
+  /* horizontally*/
   align-items: center;
+  /* vertically*/
   text-align: center;
+  /* text */
+}
+
+.verticalCenter {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
 }
 
 .left {
@@ -19,31 +44,50 @@
   align-items: center;
 }
 
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-body {
-position: relative;
-width: 100%;
-height: 10vh;
-font-family: Montserrat;
-margin-top: 0px;
-z-index: 1;
-/* background-color: #39595e; */
-background-attachment: fixed;
-background-color:#fffae6;
-/* background-image: linear-gradient(147deg, #485461 0%, #28313b 74%); */
-}
-
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
 
-input[type=number]:focus {
-  border: 1px solid rgb(212, 212, 212);
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+input[id=inputColor]:focus {
+  border: 1px solid rgb(224, 224, 224);
+  border-right: 0px;
+  outline: none;
+  /* border-color: red; */
+}
+
+input[id=input2Color]:focus {
+  border: 1px solid rgb(224, 224, 224);
+  border-right: 0px;
+  outline: none;
+  /* border-color: red; */
+}
+
+input[name=searchmSyn]:focus {
+  border: 1px solid rgb(224, 224, 224);
+  border-left: 0px;
+  outline: none;
 }
 
 #inputColor::placeholder {
+  color: #000000;
+  opacity: 0.3;
+}
+
+#input2Color::placeholder {
+  color: #000000;
+  opacity: 1;
+}
+
+#input3Color::placeholder {
   color: #000000;
   opacity: 0.3;
 }
@@ -56,49 +100,92 @@ input[type=number]:focus {
   margin-top: 0px;
   z-index: 1;
   background-attachment: fixed;
-  background: linear-gradient(147deg, rgb(49, 82, 92) 0%, rgb(73, 84, 42) 100%);  
+  background: linear-gradient(147deg, rgb(49, 82, 92) 0%, rgb(73, 84, 42) 100%);
 }
 
 .cell {
   border: 0px solid rgba(0, 0, 0, 0.05);
-  box-shadow: none !important
+  box-shadow: none !important;
+}
+
+.cell2 {
+  /* border: 0px solid rgba(0, 0, 0, 0.05); */
+  box-shadow: none !important;
 }
 
 .cardbody {
-background-color: #fffcf0;
-backdrop-filter: blur(8px);
-border-width: 1px;  
-border-style: solid;
-border-color: #e4e1d3;
-/* background-image: linear-gradient(200deg, #485461 74%, #28313b 0%); */
+  background-color: #fffcf0;
+  backdrop-filter: blur(8px);
+  border-width: 1px;
+  border-style: solid;
+  border-color: #e4e1d3;
+  /* background-image: linear-gradient(200deg, #485461 74%, #28313b 0%); */
+}
+
+.inputCardbody {
+  background-color: #fffcf0;
+  backdrop-filter: blur(8px);
+  border-width: 1px;
+  border-left: 0px;
+  border-style: solid;
+  border-color: #e4e1d3;
+  /* background-image: linear-gradient(200deg, #485461 74%, #28313b 0%); */
 }
 
 .cardbodyLeft {
   background-color: #fffcf0;
   backdrop-filter: blur(8px);
-  border-width: 1px;  
+  border-width: 1px;
   border-left: 0px;
   border-style: solid;
   border-color: #e4e1d3;
   /* background-image: linear-gradient(200deg, #485461 74%, #28313b 0%); */
-  }
+}
+
+.cardbodyRight {
+  background-color: #fffcf0;
+  backdrop-filter: blur(8px);
+  border-width: 1px;
+  border-right: 0px;
+  border-style: solid;
+  border-color: #e4e1d3;
+  /* background-image: linear-gradient(200deg, #485461 74%, #28313b 0%); */
+}
 
 .textDarkMedium {
-color: #4d4852;
-font-weight: bold;
-border: 1px solid #47414d;
-font-size: 15px;
-z-index: 2;
+  color: #4d4852;
+  font-weight: bold;
+  border: 1px solid #4d4c41;
+  font-size: 15px;
+  z-index: 2;
+}
+
+.textDarkOpenOrder {
+  color: #4d4852;
+  cursor: pointer;
+  font-weight: bold;
+  border: double 1px transparent;
+  border-radius: 5px;
+  background-image: linear-gradient(#fffcf0, #fffcf0),   linear-gradient(to right, green, gold);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  font-size: 15px;
+  z-index: 2;
+}
+
+.textDarkOpenOrder:hover {
+  background-image: linear-gradient(#fffcf0, #fffcf0),   linear-gradient(to right, green, gold);
+  box-shadow: 0 0 10px #9ecaed;
 }
 
 .textDarkMedium:hover {
-background-color: #656069;
-color: #dddddd;
+  background-color: #656069;
+  color: #dddddd;
 }
 
 .textWarningColor {
   color: #ff9c08;
-  }
+}
 
 .textDarkMedium1 {
   color: #dddddd;
@@ -108,84 +195,84 @@ color: #dddddd;
   border: 1px solid #47414d;
   font-size: 15px;
   z-index: 2;
-  }
-  
-  .textDarkMedium1:hover {
+}
+
+.textDarkMedium1:hover {
   background-color: #656069;
   cursor: not-allowed;
   color: #dddddd;
-  }
-
-.rowC{
-display: flex; 
-flex-direction: row;
-align-items: flex-start;
 }
 
-.rowS{
-  display: flex; 
+.rowC {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.rowS {
+  display: flex;
   flex-direction: row;
   align-items: center;
 }
 
 .loading {
-position: relative;
-width: 100%;
-height: 10vh;
-font-family: Montserrat;
-margin-top: 180px;
+  position: relative;
+  width: 100%;
+  height: 10vh;
+  font-family: Montserrat;
+  margin-top: 180px;
 }
 
 .wrap {
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .textLoading {
-color: #fbae17;
-display: inline-block;
-margin-left: 5px;
-font-size: 50px;
+  color: #fbae17;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 50px;
 }
 
 .textLoadingSmall {
-margin-top: 20px;
-color: #fbae17;
-display: inline-block;
-margin-left: 5px;
-font-size: 20px;
+  margin-top: 20px;
+  color: #fbae17;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 20px;
 }
 
 .text {
-color: #ff9a04;
-font-weight: bold;
-text-shadow: 0px 1px, 1px 0, 1px 1px;
-/* display: inline-block; */
-margin-top: 0px;
-margin-left: 0px;
-font-size: 45px;
+  color: #ff9a04;
+  font-weight: bold;
+  text-shadow: 0px 1px, 1px 0, 1px 1px;
+  /* display: inline-block; */
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 45px;
 }
 
 .textMiddleBold {
-color: #646363;
-font-weight: bold;
-text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
-font-style: italic;
-/* display: inline-block; */
-margin-top: 0px;
-margin-left: 0px;
-font-size: 26px;
+  color: #646363;
+  font-weight: bold;
+  text-shadow: 0px 0.5px, 0.5px 0px, 0.5px 0.5px;
+  font-style: italic;
+  /* display: inline-block; */
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 26px;
 }
 
 .textMiddleBold1 {
-color: #424242;
-font-weight: bold;
-/* text-shadow: 0px 0.2px, 0.2px 0px, 0.2px 0.2px; */
-margin-top: 0px;
-margin-left: 0px;
-font-size: 20px;
+  color: #424242;
+  font-weight: bold;
+  /* text-shadow: 0px 0.2px, 0.2px 0px, 0.2px 0.2px; */
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 20px;
 }
 
 .textMiddleBold2 {
@@ -195,12 +282,12 @@ font-size: 20px;
   margin-top: 0px;
   margin-left: 0px;
   font-size: 20px;
-  }
+}
 
 .textMiddleBold2:hover {
-text-decoration: none;
-color: #424242;
-cursor: pointer;
+  text-decoration: none;
+  color: #424242;
+  cursor: pointer;
 }
 
 .textSmallBold1 {
@@ -210,27 +297,27 @@ cursor: pointer;
   margin-top: 0px;
   margin-left: 0px;
   font-size: 15px;
-  }
+}
 
 .textSmallBold1:active {
   text-decoration: none;
   color: #ffae00;
   cursor: pointer;
-  }
+}
 
 .textSmallBold1:hover {
-text-decoration: none;
-color: #ffae00;
-cursor: pointer;
+  text-decoration: none;
+  color: #ffae00;
+  cursor: pointer;
 }
 
 .textMiddle {
-color: #414141;
-font-weight: normal;
-/* display: inline-block; */
-margin-top: 0px;
-margin-left: 0px;
-font-size: 20px;
+  color: #414141;
+  font-weight: normal;
+  /* display: inline-block; */
+  margin-top: 0px;
+  margin-left: 0px;
+  font-size: 20px;
 }
 
 .textSmall {
@@ -240,103 +327,104 @@ font-size: 20px;
   margin-top: 0px;
   margin-left: 0px;
   font-size: 15px;
-  }
+}
 
 .textBox {
-color: #ff9a04;
-display: inline-block;
-margin-left: 5px;
-/* font-size: 15px; */
+  color: #ff9a04;
+  display: inline-block;
+  margin-left: 5px;
+  /* font-size: 15px; */
 }
 
 .textInfo {
-color: #000000;
-display: inline-block;
-margin-left: 5px;
-font-size: 13px;
+  color: #000000;
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 13px;
 }
 
 .dropdown-toggle::after {
-display: none;
+  display: none;
 }
 
 .dropdown0 {
-padding : 0.3rem;
-font-size: 18px;
-color: #6b6b6b;
-font-weight: bold;
-cursor: pointer;
-margin-bottom: 5px;
-text-decoration: none;
-border-bottom: 0.1px solid rgb(187, 187, 187);
+  padding: 0.3rem;
+  font-size: 18px;
+  color: #6b6b6b;
+  font-weight: bold;
+  cursor: pointer;
+  margin-bottom: 5px;
+  text-decoration: none;
+  border-bottom: 0.1px solid rgb(187, 187, 187);
 }
 
 .dropdown {
-padding : 0.3rem;
-font-size: 18px;
-color: #6b6b6b;
-font-weight: bold;
-cursor: pointer;
+  padding: 0.3rem;
+  font-size: 18px;
+  color: #6b6b6b;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .dropdown1 {
-padding : 0.3rem;
-font-size: 18px;
-color: #c37aff;
-cursor: pointer;
+  padding: 0.3rem;
+  font-size: 18px;
+  color: #c37aff;
+  cursor: pointer;
 }
 
 .dropdown0.active {
-color: #7affcc;
+  color: #7affcc;
 }
 
 .dropdown0:hover {
-text-decoration: none;
-color: #ffae00;
+  text-decoration: none;
+  color: #ffae00;
 }
 
 .dropdown1.active {
-color: #c37aff;
+  color: #c37aff;
 }
 
 .dropdown1:hover {
-text-decoration: none;
-color: #ffae00;
+  text-decoration: none;
+  color: #ffae00;
 }
 
 .dropdown.active {
-color: #c37aff;
+  color: #c37aff;
 }
 
 .dropdown:hover {
-text-decoration: none;
-color: #ffae00;
+  text-decoration: none;
+  color: #ffae00;
 }
 
 .exLink0 {
-color: grey;
-text-decoration: none;
-cursor: pointer;
+  color: grey;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .exLink0.active {
   color: grey;
   text-decoration: none;
   cursor: pointer;
-  }
+}
 
 .exLink0:hover {
-text-decoration: none;
-color: #ffae00;
+  text-decoration: none;
+  color: #ffae00;
 }
 
 .bounceball {
-position: relative;
-display: inline-block;
-height: 37px;
-width: 15px;
+  position: relative;
+  display: inline-block;
+  height: 37px;
+  width: 15px;
 
 }
+
 .bounceball:before {
   position: absolute;
   content: "";
@@ -348,8 +436,9 @@ width: 15px;
   background-color: #fbae17;
   transform-origin: 50%;
   -webkit-animation: bounce 500ms alternate infinite ease;
-          animation: bounce 500ms alternate infinite ease;
+  animation: bounce 500ms alternate infinite ease;
 }
+
 @-webkit-keyframes bounce {
   0% {
     top: 30px;
@@ -357,11 +446,13 @@ width: 15px;
     border-radius: 60px 60px 20px 20px;
     transform: scaleX(2);
   }
+
   35% {
     height: 15px;
     border-radius: 50%;
     transform: scaleX(1);
   }
+
   100% {
     top: 0;
   }
@@ -374,14 +465,87 @@ width: 15px;
     border-radius: 60px 60px 20px 20px;
     transform: scaleX(2);
   }
+
   35% {
     height: 15px;
     border-radius: 50%;
     transform: scaleX(1);
   }
+
   100% {
     top: 0;
   }
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 36px;
+  height: 20.4px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch2 input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+  font-size: 20px;
+}
+
+.switch2:active {
+  transition: background-color 0s ease-in-out 0s;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 15.6px;
+  width: 15.6px;
+  left: 2.4px;
+  bottom: 2.4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked+.slider {
+  background-color: #2196F3;
+}
+
+input:focus+.slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+  -webkit-transform: translateX(15.6px);
+  -ms-transform: translateX(15.6px);
+  transform: translateX(15.6px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 .comingSoon {
@@ -402,6 +566,7 @@ width: 15px;
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -411,6 +576,7 @@ width: 15px;
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
@@ -461,13 +627,13 @@ width: 15px;
   color: #ffffff;
   background-color: #929292;
   cursor: pointer;
-  }
+}
 
 .textTransparentButton:hover {
-text-decoration: none;
-color: #ffffff;
-background-color: #929292;
-cursor: pointer;
+  text-decoration: none;
+  color: #ffffff;
+  background-color: #929292;
+  cursor: pointer;
 }
 
 .textTransparentButton2 {
@@ -494,6 +660,16 @@ cursor: pointer;
   text-decoration: none;
 } */
 
+.hover {
+  font-size: 16px;
+  color: #d6d6d6;
+  cursor: pointer;
+}
+
+.hover.active {
+  color: #c37aff;
+}
+
 .hover:hover {
   text-decoration: none;
   color: #e0e0e0;
@@ -510,6 +686,7 @@ cursor: pointer;
   width: 0px;
   height: 0px;
 }
+
 .lds-facebook div {
   display: inline-block;
   position: absolute;
@@ -517,24 +694,30 @@ cursor: pointer;
   background: rgb(114, 114, 114);
   animation: lds-facebook 1.0s cubic-bezier(0, 0.3, 0.3, 0.6) infinite;
 }
+
 .lds-facebook div:nth-child(1) {
   left: -6px;
   animation-delay: -0.24s;
 }
+
 .lds-facebook div:nth-child(2) {
   left: 0px;
   animation-delay: -0.12s;
 }
+
 .lds-facebook div:nth-child(3) {
   left: 6px;
   animation-delay: 0;
 }
+
 @keyframes lds-facebook {
   0% {
     top: -4px;
     height: 12px;
   }
-  50%, 100% {
+
+  50%,
+  100% {
     top: -2px;
     height: 6px;
   }
@@ -544,14 +727,16 @@ table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   table-layout: fixed;
-  width: 650px;
+  width: 90%;
 }
 
-td, th {
+td,
+th {
   /* position: sticky; */
-  border: 1px solid #dddddd;
+  border: 0px solid #dddddd;
   text-align: center;
-  padding: 10px;
+  padding: 5px;
+  width: 100%;
   /* height: 100%; */
 }
 
@@ -562,15 +747,17 @@ tr:nth-child(even) {
 
 .popup-content {
   margin: auto;
-  background:#fffae6;
+  background: #fffae6;
   border: 1px solid #d4d4d4;
   width: 100%;
   padding: 5px;
 }
+
 .popup-arrow {
   color: #fffae6;
-  
+
 }
+
 [role='tooltip'].popup-content {
   /* width: 200px; */
   box-shadow: rgba(0, 0, 0, 0.16) 0px 0px 3px;
@@ -579,6 +766,7 @@ tr:nth-child(even) {
 .popup-overlay {
   background: rgba(0, 0, 0, 0.5);
 }
+
 [data-popup='tooltip'].popup-overlay {
   background: transparent;
 }
@@ -615,11 +803,11 @@ tr:nth-child(even) {
 }
 
 .arrow-down {
-  width: 0; 
-  height: 0; 
+  width: 0;
+  height: 0;
   border-right: 20px solid transparent;
-  border-left: 20px solid transparent; 
-  border-top: 20px solid #ffae00; 
+  border-left: 20px solid transparent;
+  border-top: 20px solid #ffae00;
   /* border-width: 0 2px 2px 0; */
 }
 
@@ -633,43 +821,53 @@ tr:nth-child(even) {
   left: 16px;
   top: 28px;
 }
+
 .bm-burger-bars {
   background: #0f0f0f;
 }
+
 .bm-burger-bars-hover {
   background: #adb18f;
 }
+
 .bm-cross-button {
   height: 24px;
   width: 24px;
 }
+
 .bm-cross {
   background: #0f0f0f;
 }
+
 .bm-menu-wrap {
   height: 100%;
   margin-left: -20px;
   margin-top: 0px;
 }
+
 .bm-menu {
   margin-left: 0;
   background: #fdf3cc;
   padding: 1em 0.5em;
 }
+
 .bm-item-list {
   padding: 2em;
   color: #000000;
 }
+
 .topleft {
   position: absolute;
   top: 20px;
   left: 15px;
 }
+
 .topleft1 {
   position: absolute;
   top: 22px;
   left: 55px;
 }
+
 .topleft2 {
   position: absolute;
   top: 26px;
@@ -681,13 +879,15 @@ tr:nth-child(even) {
   top: 21px;
   right: 15px;
 }
+
 .topright1 {
   position: absolute;
   top: 29px;
   right: 235px;
 }
+
 .reallyBold {
-  text-shadow: 
-      -0.2px 0 rgb(100, 100, 100), 0 0.2px rgb(100, 100, 100), 0.2px 0 rgb(100, 100, 100), 0 -0.2px rgb(100, 100, 100), 
-      -0.2px -0.2px rgb(100, 100, 100), 0.2px 0.2px rgb(100, 100, 100), -0.2px 0.2px rgb(100, 100, 100), 0.2px -0.2px rgb(100, 100, 100);
+  text-shadow:
+    -0.2px 0 rgb(100, 100, 100), 0 0.2px rgb(100, 100, 100), 0.2px 0 rgb(100, 100, 100), 0 -0.2px rgb(100, 100, 100),
+    -0.2px -0.2px rgb(100, 100, 100), 0.2px 0.2px rgb(100, 100, 100), -0.2px 0.2px rgb(100, 100, 100), 0.2px -0.2px rgb(100, 100, 100);
 }
