--- a/src/components/App.css
+++ b/src/components/App.css
@@ -725,6 +725,7 @@ input:checked+.slider:before {
 
 table {
   font-family: arial, sans-serif;
+  word-wrap: normal;
   border-collapse: collapse;
   table-layout: fixed;
   width: 90%;
