--- a/src/components/App.css
+++ b/src/components/App.css
@@ -127,6 +127,20 @@ input[name=searchmSyn]:focus {
   box-shadow: none !important;
 }
 
+.cell2:focus {
+  box-shadow: none !important;
+  background-color: transparent;
+}
+
+.cell2:active {
+  box-shadow: none !important;
+  background-color: transparent;
+}
+
+.cell2:hover {
+  background-color: transparent;
+}
+
 .cardbody {
   background-color: #fffcf0;
   backdrop-filter: blur(8px);
@@ -362,7 +376,7 @@ input[name=searchmSyn]:focus {
 .dropdown0 {
   padding: 0.3rem;
   font-size: 18px;
-  color: #6b6b6b;
+  color: #252525;
   font-weight: bold;
   cursor: pointer;
   margin-bottom: 5px;
@@ -373,7 +387,7 @@ input[name=searchmSyn]:focus {
 .dropdown {
   padding: 0.3rem;
   font-size: 18px;
-  color: #6b6b6b;
+  color: #252525;
   font-weight: bold;
   cursor: pointer;
 }
@@ -634,6 +648,18 @@ input:checked+.slider:before {
   font-size: 15px;
 }
 
+.textGreenButton {
+  background-color: transparent;
+  color: #28a745;
+}
+
+.textGreenButton:hover {
+  text-decoration: none;
+  color: white;
+  background-color: #28a745;
+  cursor: pointer;
+}
+
 .textBlackButton:hover {
   text-decoration: none;
   color: #ffffff;
@@ -855,7 +881,7 @@ tr:nth-child(even) {
 .bm-menu-wrap {
   height: 100%;
   margin-left: -20px;
-  margin-top: 0px;
+  margin-top: -40px;
 }
 
 .bm-menu {
@@ -867,6 +893,10 @@ tr:nth-child(even) {
 .bm-item-list {
   padding: 2em;
   color: #000000;
+}
+
+.bm-overlay {
+  margin-top: -40px;
 }
 
 .topleft {
@@ -883,7 +913,7 @@ tr:nth-child(even) {
 
 .topleft2 {
   position: absolute;
-  top: 26px;
+  top: 20px;
   left: 235px;
 }
 
@@ -896,11 +926,19 @@ tr:nth-child(even) {
 .topright1 {
   position: absolute;
   top: 29px;
-  right: 235px;
+  right: 255px;
+}
+
+.fixed-bottom {
+  z-index: 99;
 }
 
 .reallyBold {
   text-shadow:
     -0.2px 0 rgb(100, 100, 100), 0 0.2px rgb(100, 100, 100), 0.2px 0 rgb(100, 100, 100), 0 -0.2px rgb(100, 100, 100),
     -0.2px -0.2px rgb(100, 100, 100), 0.2px 0.2px rgb(100, 100, 100), -0.2px 0.2px rgb(100, 100, 100), 0.2px -0.2px rgb(100, 100, 100);
+}
+
+.nav-item.dropdown:hover .dropdown-menu {
+  display: block;
 }
